--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-  <title>NaxaBe Digital</title>
+  <meta charset="UTF-8">
+  <title>NaxaBe Digital – Web & AI Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: white;
+    }
+
+    section {
+      padding: 80px 20px;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    h1, h2 {
+      margin-bottom: 20px;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 120px 20px;
+      background: linear-gradient(135deg, #111, #1c1c1c);
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 30px;
+      background: white;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #1c1c1c;
+      padding: 30px;
+      border-radius: 8px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px;
+      background: #111;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
+
+<section class="hero">
   <h1>NaxaBe Digital</h1>
-  <p>Portfolio w budowie.</p>
+  <p>Nowoczesne strony internetowe dla małych i średnich firm</p>
+  <a href="#kontakt" class="btn">Skontaktuj się</a>
+</section>
+
+<section>
+  <h2>O mnie</h2>
+  <p>Tworzę nowoczesne strony internetowe oraz landing page. Łączę web development z narzędziami AI w celu optymalizacji i automatyzacji procesów.</p>
+</section>
+
+<section>
+  <h2>Usługi</h2>
+  <ul>
+    <li>Strony wizytówki</li>
+    <li>Landing page</li>
+    <li>WordPress</li>
+    <li>AI-assisted web development</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Projekty</h2>
+  <div class="projects">
+    <div class="card">
+      <h3>Projekt #1</h3>
+      <p>Strona w budowie</p>
+    </div>
+    <div class="card">
+      <h3>Projekt #2</h3>
+      <p>Strona w budowie</p>
+    </div>
+    <div class="card">
+      <h3>Projekt #3</h3>
+      <p>Strona w budowie</p>
+    </div>
+  </div>
+</section>
+
+<section id="kontakt">
+  <h2>Kontakt</h2>
+  <p>Email: naxabedigital@gmail.com</p>
+</section>
+
+<footer>
+  © 2026 NaxaBe Digital
+</footer>
+
 </body>
 </html>
