--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
+      background: radial-gradient(circle at top left, #111 0%, #0a0a0a 40%, #000 100%);
       color: white;
     }
 
@@ -31,12 +31,17 @@
     .btn {
       display: inline-block;
       margin-top: 20px;
-      padding: 12px 30px;
-      background: white;
+      padding: 14px 40px;
+      background: linear-gradient(135deg, #ffffff, #cfcfcf);
       color: black;
       text-decoration: none;
       font-weight: bold;
-      border-radius: 4px;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
     }
 
     .projects {
@@ -75,12 +80,34 @@
 
 <section>
   <h2>Usługi</h2>
-  <ul>
-    <li>Strony wizytówki</li>
-    <li>Landing page</li>
-    <li>WordPress</li>
-    <li>AI-assisted web development</li>
-  </ul>
+  <div class="projects">
+    
+    <div class="card">
+      <h3>Strony internetowe</h3>
+      <p>Nowoczesne strony wizytówki oraz landing page dostosowane do potrzeb małych i średnich firm.</p>
+    </div>
+
+    <div class="card">
+      <h3>WordPress</h3>
+      <p>Projektowanie i konfiguracja stron WordPress z naciskiem na wydajność i łatwą edycję treści.</p>
+    </div>
+
+    <div class="card">
+      <h3>SEO & Optymalizacja</h3>
+      <p>Podstawowa optymalizacja techniczna, struktura treści oraz przygotowanie strony pod pozycjonowanie.</p>
+    </div>
+
+    <div class="card">
+      <h3>AI & Automatyzacja</h3>
+      <p>Wykorzystanie narzędzi AI do usprawnienia treści, UX oraz procesów marketingowych.</p>
+    </div>
+
+    <div class="card">
+      <h3>Content & Reklama</h3>
+      <p>Tworzenie struktury treści, przygotowanie pod kampanie reklamowe i rozwój widoczności online.</p>
+    </div>
+
+  </div>
 </section>
 
 <section>
