--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <section>
   <h2>O mnie</h2>
-  <p>Tworzę nowoczesne strony internetowe oraz landing page. Łączę web development z narzędziami AI w celu optymalizacji i automatyzacji procesów.</p>
+  <p>Tworzę nowoczesne strony internetowe i landing page dla małych oraz średnich firm. Łączę web development z AI, SEO i automatyzacją, aby budować wydajne, zoptymalizowane i skuteczne rozwiązania online.</p>
 </section>
 
 <section>
