--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
 </section>
 
 <section>
+  <h2>Dlaczego NaxaBe?</h2>
+  <div class="projects">
+
+    <div class="card">
+      <h3>Strategiczne podejście</h3>
+      <p>Nie tworzę tylko estetycznych stron. Każdy projekt buduję z myślą o konwersji, widoczności i realnym efekcie biznesowym.</p>
+    </div>
+
+    <div class="card">
+      <h3>Technologia + AI</h3>
+      <p>Łączę web development z narzędziami AI, SEO i automatyzacją, aby tworzyć nowoczesne i skalowalne rozwiązania.</p>
+    </div>
+
+    <div class="card">
+      <h3>Indywidualne podejście</h3>
+      <p>Każda firma ma inne potrzeby. Dopasowuję strukturę strony, treści i funkcjonalności do konkretnej branży.</p>
+    </div>
+
+    <div class="card">
+      <h3>Nowoczesny design</h3>
+      <p>Minimalistyczna, czytelna estetyka z naciskiem na UX i profesjonalny wizerunek online.</p>
+    </div>
+
+  </div>
+</section>
+
+<section>
   <h2>Usługi</h2>
   <div class="projects">
     
