--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ footer {
     </div>
     <div>
       <!-- Wstaw tutaj nazwę pliku swojego zdjęcia -->
-      <img src="about-ai.jpeg" alt="Founder NaxaBe Digital">
+      <img src="about-ai-min.jpeg" alt="Founder NaxaBe Digital">
     </div>
   </div>
 </section>
