--- a/index.html
+++ b/index.html
@@ -129,15 +129,32 @@ footer {
 <section>
   <h2>O mnie</h2>
   <div class="about-wrapper">
-    <div>
-      <p>
-        Projektuję nowoczesne strony internetowe i landing page dla małych oraz średnich firm.
-        Łączę web development z AI, SEO i automatyzacją, aby budować skalowalne i wydajne rozwiązania online.
-      </p>
-      <p>
-        Przykładem wykorzystania AI jest m.in. generowanie zaawansowanych modeli wizualnych,
-        postaci do gier czy koncepcji projektowych — łączę kreatywność z technologią.
-      </p>
+  <div>
+  <p>
+    Projektuję nowoczesne strony internetowe i landing page dla małych oraz średnich firm, 
+    które chcą budować silną obecność online i realnie zwiększać sprzedaż.
+  </p>
+
+  <p>
+    Łączę web development z AI, SEO oraz automatyzacją procesów marketingowych, 
+    tworząc rozwiązania nie tylko estetyczne, ale przede wszystkim strategiczne i skalowalne.
+  </p>
+
+  <p>
+    Moje podejście opiera się na analizie biznesowej – każda strona powstaje 
+    z myślą o konwersji, widoczności w wyszukiwarkach oraz dalszym rozwoju marki.
+  </p>
+
+  <p>
+    Wykorzystuję narzędzia AI zarówno w obszarze optymalizacji treści, 
+    jak i generowania zaawansowanych koncepcji wizualnych – 
+    od modeli projektowych po cyfrowe postaci czy elementy kreatywne wspierające branding.
+  </p>
+
+    <p>
+      <strong>NaxaBe Digital</strong> to połączenie technologii, estetyki 
+      i świadomej strategii online.
+    </p>
     </div>
     <div>
       <!-- Wstaw tutaj nazwę pliku swojego zdjęcia -->
