--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ footer {
     Wykorzystuję narzędzia AI zarówno w obszarze optymalizacji treści, 
     jak i generowania zaawansowanych koncepcji wizualnych – 
     od modeli projektowych po cyfrowe postaci czy elementy kreatywne wspierające branding.
+    Przykładem wykorzystania AI jest m.in. generowanie zaawansowanych modeli wizualnych, postaci do gier czy koncepcji projektowych — łączę kreatywność z technologią.
   </p>
 
     <p>
