--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@ h2::after {
   grid-template-columns: 1fr 1fr;
   gap: 50px;
   align-items: center;
+  font-size: 19px;
+  line-height: 1.9;
+  color: #d6d6d6;
+}
+
+.about-wrapper p strong {
+  color: #c9a227;
 }
 
 .about-wrapper img {
