--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 38px;
+  letter-spacing: 1px;
   position: relative;
 }
 
@@ -109,6 +110,14 @@ h2::after {
   border: 2px solid #c9a227;
 }
 
+.founder-signature {
+  margin-top: 15px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #c9a227;
+  text-transform: uppercase;
+}
+
 footer {
   text-align: center;
   padding: 40px;
@@ -136,37 +145,41 @@ footer {
 <section>
   <h2>O mnie</h2>
   <div class="about-wrapper">
-  <div>
-  <p>
-    Projektuję nowoczesne strony internetowe i landing page dla małych oraz średnich firm, 
-    które chcą budować silną obecność online i realnie zwiększać sprzedaż.
-  </p>
 
-  <p>
-    Łączę web development z AI, SEO oraz automatyzacją procesów marketingowych, 
-    tworząc rozwiązania nie tylko estetyczne, ale przede wszystkim strategiczne i skalowalne.
-  </p>
-
-  <p>
-    Moje podejście opiera się na analizie biznesowej – każda strona powstaje 
-    z myślą o konwersji, widoczności w wyszukiwarkach oraz dalszym rozwoju marki.
-  </p>
-
-  <p>
-    Wykorzystuję narzędzia AI zarówno w obszarze optymalizacji treści, 
-    jak i generowania zaawansowanych koncepcji wizualnych – 
-    od modeli projektowych po cyfrowe postaci czy elementy kreatywne wspierające branding.
-  </p>
-
-    <p>
-      <strong>NaxaBe Digital</strong> to połączenie technologii, estetyki 
-      i świadomej strategii online.
-    </p>
-    </div>
     <div>
-      <!-- Wstaw tutaj nazwę pliku swojego zdjęcia -->
-      <img src="about-ai-min.jpeg" alt="Founder NaxaBe Digital">
+      <p>
+        Projektuję nowoczesne strony internetowe i landing page dla małych oraz średnich firm,
+        które chcą budować silną obecność online i realnie zwiększać sprzedaż.
+      </p>
+
+      <p>
+        Łączę web development z AI, SEO oraz automatyzacją,
+        tworząc rozwiązania estetyczne, strategiczne i skalowalne.
+      </p>
+
+      <p>
+        Każdy projekt powstaje w oparciu o analizę biznesową – z myślą o konwersji,
+        widoczności w wyszukiwarkach oraz długofalowym rozwoju marki.
+      </p>
+
+      <p>
+        Wykorzystuję AI w optymalizacji treści oraz tworzeniu koncepcji wizualnych,
+        łącząc kreatywność z technologią.
+      </p>
+
+      <p>
+        <strong>NaxaBe Digital</strong> to połączenie technologii, estetyki
+        i świadomej strategii online.
+      </p>
     </div>
+
+    <div>
+      <img src="about-ai-min.jpeg" alt="Nadia Kacała – Founder NaxaBe Digital">
+      <p class="founder-signature">
+        Nadia Kacała – Founder, NaxaBe Digital
+      </p>
+    </div>
+
   </div>
 </section>
 
@@ -214,6 +227,28 @@ footer {
   </div>
 </section>
 
+<section>
+  <h2>Projekty</h2>
+  <div class="projects">
+
+    <div class="card">
+      <h3>Projekt #1</h3>
+      <p>Nowoczesna strona wizytówka dla firmy usługowej – nacisk na konwersję i SEO.</p>
+    </div>
+
+    <div class="card">
+      <h3>Projekt #2</h3>
+      <p>Landing page pod kampanię reklamową – struktura zoptymalizowana pod sprzedaż.</p>
+    </div>
+
+    <div class="card">
+      <h3>Projekt #3</h3>
+      <p>Projekt koncepcyjny z wykorzystaniem AI i automatyzacji procesów marketingowych.</p>
+    </div>
+
+  </div>
+</section>
+  
 <section id="kontakt">
   <h2>Kontakt</h2>
   <p>Email: naxabe.digital@gmail.com</p>
