--- a/index.html
+++ b/index.html
@@ -111,11 +111,18 @@ h2::after {
 }
 
 .founder-signature {
-  margin-top: 15px;
-  font-size: 14px;
-  letter-spacing: 1px;
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 500;
   color: #c9a227;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.ai-note {
+  margin-top: 6px;
+  font-size: 13px;
+  color: #888;
+  letter-spacing: 1px;
 }
 
 footer {
@@ -173,12 +180,17 @@ footer {
       </p>
     </div>
 
-    <div>
-      <img src="about-ai-min.jpeg" alt="Nadia Kacała – Founder NaxaBe Digital">
-      <p class="founder-signature">
-        Nadia Kacała – Founder, NaxaBe Digital
-      </p>
-    </div>
+<div>
+  <img src="about-ai-min.jpeg" alt="Nadia Kacała Founder of NaxaBe Digital">
+
+  <p class="founder-signature">
+    Nadia Kacała – Founder of NaxaBe Digital
+  </p>
+
+  <p class="ai-note">
+    AI Generated Visual Representation
+  </p>
+</div>
 
   </div>
 </section>
