--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@ h2::after {
   grid-template-columns: 1fr 1fr;
   gap: 50px;
   align-items: center;
-  font-size: 23px;
   line-height: 1.9;
   color: #d6d6d6;
+}
+
+.about-wrapper p {
+  font-size: 22px;
+  line-height: 1.95;
 }
 
 .about-wrapper p strong {
