--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 }
 
 section {
-  padding: 100px 20px;
+  padding: 80px 20px;
   max-width: 1200px;
   margin: auto;
 }
@@ -95,16 +95,17 @@ h2::after {
 }
 
 .card {
-  background: #151515;
-  padding: 35px;
-  border-radius: 8px;
-  border: 1px solid #222;
-  transition: 0.3s;
+  background: linear-gradient(145deg, #141414, #101010);
+  padding: 40px;
+  border-radius: 12px;
+  border: 1px solid #1f1f1f;
+  transition: 0.35s ease;
 }
 
 .card:hover {
   border-color: #c9a227;
-  transform: translateY(-5px);
+  transform: translateY(-6px);
+  box-shadow: 0 10px 35px rgba(201,162,39,0.08);
 }
 
 .about-wrapper {
@@ -140,10 +141,11 @@ h2::after {
 }
 
 .ai-note {
-  margin-top: 4px;
-  font-size: 11px;
-  color: #666;
-  letter-spacing: 0.8px;
+  margin-top: 2px;
+  font-size: 10px;
+  color: #444;
+  letter-spacing: 0.5px;
+  opacity: 0.6;
 }
 
 footer {
