--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@ h2::after {
   box-shadow: 0 10px 35px rgba(201,162,39,0.08);
 }
 
+.card h3 {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.card p {
+  font-size: 17px;
+  line-height: 1.7;
+  color: #cfcfcf;
+}
+
 .about-wrapper {
   display: grid;
   grid-template-columns: 1.2fr 1fr;
@@ -142,10 +153,16 @@ h2::after {
 
 .ai-note {
   margin-top: 2px;
-  font-size: 10px;
+  font-size: 9px;
   color: #444;
-  letter-spacing: 0.5px;
-  opacity: 0.6;
+  letter-spacing: 0.3px;
+  opacity: 0.5;
+  line-height: 1.2;
+}
+
+.founder-signature,
+.ai-note {
+  line-height: normal;
 }
 
 footer {
