--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ section {
   margin: auto;
 }
 
+section + section {
+  padding-top: 40px;
+}
+
 h1, h2, h3 {
   margin-bottom: 20px;
 }
@@ -129,7 +133,7 @@ h2::after {
 }
 
 .about-wrapper p {
-  font-size: 23px;
+  font-size: 21px;
   line-height: 1.95;
 }
 
@@ -145,7 +149,7 @@ h2::after {
 
 .founder-signature {
   margin-top: 22px;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
   color: #c9a227;
   letter-spacing: 0.5px;
@@ -153,7 +157,7 @@ h2::after {
 
 .ai-note {
   margin-top: 2px;
-  font-size: 9px;
+  font-size: 7px;
   color: #444;
   letter-spacing: 0.3px;
   opacity: 0.5;
