--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h2::after {
 
 .hero {
   text-align: center;
-  padding: 180px 20px;
+  padding: 120px 20px;
   background: radial-gradient(circle at center, rgba(201,162,39,0.08), #000 60%);
 }
 
@@ -175,6 +175,22 @@ footer {
     grid-template-columns: 1fr;
   }
 }
+
+@media(max-width: 600px){
+
+  section {
+    padding: 35px 18px;
+  }
+
+  .hero {
+    padding: 90px 20px;
+  }
+  
+  h2 {
+    margin-bottom: 14px;
+  }
+}
+  
 </style>
 </head>
 
