--- a/index.html
+++ b/index.html
@@ -188,19 +188,38 @@ h2::after {
 }
 
 .social-links {
+  margin-top: 30px;
   display: flex;
-  gap: 18px;
-  font-size: 22px;
+  gap: 40px;
 }
 
-.social-links a {
-  color: #c9a227;
+.social-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-decoration: none;
+  color: #c9a227;
+  font-size: 14px;
   transition: 0.3s ease;
 }
 
-.social-links a:hover {
-  transform: translateY(-3px);
+.social-icon {
+  width: 60px;
+  height: 60px;
+  border: 2px solid #c9a227;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin-bottom: 10px;
+  transition: 0.3s ease;
+}
+
+.social-item:hover .social-icon {
+  background: #c9a227;
+  color: black;
+  transform: translateY(-4px);
 }
 
 .about-wrapper {
@@ -426,11 +445,24 @@ footer {
       <button class="copy-btn" onclick="copyEmail()">Kopiuj</button>
     </div>
 
-    <div class="social-links">
-      <a href="#" target="_blank" title="LinkedIn">🔗</a>
-      <a href="#" target="_blank" title="GitHub">💻</a>
-      <a href="#" title="Oferteo (wkrótce)">🧾</a>
-    </div>
+<div class="social-links">
+
+  <a href="#" target="_blank" class="social-item">
+    <div class="social-icon">🔗</div>
+    LinkedIn
+  </a>
+
+  <a href="#" target="_blank" class="social-item">
+    <div class="social-icon">💻</div>
+    GitHub
+  </a>
+
+  <a href="#" class="social-item">
+    <div class="social-icon">🧾</div>
+    Oferteo
+  </a>
+
+</div>
 
   </div>
 </section>
