--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@ h2::after {
 .contact-wrapper {
   margin-top: 20px;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  flex-wrap: wrap;
 }
 
 .contact-row {
@@ -447,12 +449,12 @@ footer {
 
 <div class="social-links">
 
-  <a href="#" target="_blank" class="social-item">
+  <a href="https://www.linkedin.com/in/naxabe-digital-28308a3b4/" target="_blank" class="social-item">
     <div class="social-icon">🔗</div>
     LinkedIn
   </a>
 
-  <a href="#" target="_blank" class="social-item">
+  <a href="https://github.com/naxabedigital" target="_blank" class="social-item">
     <div class="social-icon">💻</div>
     GitHub
   </a>
