--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>NaxaBe Digital – Web & AI Studio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="NaxaBe Digital – tworzenie nowoczesnych stron internetowych, landing page, WordPress, SEO i automatyzacja AI dla małych i średnich firm. Web & AI Studio.">
 
+<meta name="keywords" content="strony internetowe, tworzenie stron, landing page, WordPress, SEO, AI, automatyzacja marketingu, web development, NaxaBe Digital">
+
+<meta name="author" content="NaxaBe Digital">
+
+<meta property="og:title" content="NaxaBe Digital – Web & AI Studio">
+<meta property="og:description" content="Nowoczesne strony internetowe, SEO i AI dla firm, które chcą rosnąć online.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://naxabedigital.github.io/">
+<meta property="og:image" content="https://naxabedigital.github.io/favicon.png">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://naxabedigital.github.io/">
+
+<link rel="icon" type="image/png" href="https://naxabedigital.github.io/favicon.png">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "NaxaBe Digital",
+  "url": "https://naxabedigital.github.io/",
+  "logo": "https://naxabedigital.github.io/favicon.png",
+  "sameAs": [
+    "https://www.linkedin.com/in/naxabe-digital-28308a3b4/",
+    "https://github.com/naxabedigital"
+  ]
+}
+</script>
+  
 <style>
 body {
   margin: 0;
