--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -16,9 +16,12 @@
 <body>
 
 <header class="hero">
-    <h1>Trener Personalny Warszawa</h1>
-    <p>Indywidualne plany treningowe • Redukcja • Masa • Transformacje</p>
-    <a href="#kontakt" class="btn">Umów bezpłatną konsultację</a>
+    <div class="overlay"></div>
+    <div class="hero-content">
+        <h1>Trener Personalny Warszawa</h1>
+        <p>Transformacje sylwetki • Redukcja tkanki tłuszczowej • Budowa masy mięśniowej</p>
+        <a href="#kontakt" class="btn">Umów bezpłatną konsultację</a>
+    </div>
 </header>
 
 <section class="about">
