--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -39,6 +39,24 @@
     </ul>
 </section>
 
+<section class="transformations">
+    <h2>Metamorfozy Klientów</h2>
+    <div class="grid">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1594737625785-c1fdf3b4b93f?q=80&w=800&auto=format&fit=crop" alt="Metamorfoza 1">
+            <p>-12 kg w 4 miesiące</p>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?q=80&w=800&auto=format&fit=crop" alt="Metamorfoza 2">
+            <p>Redukcja tkanki tłuszczowej</p>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?q=80&w=800&auto=format&fit=crop" alt="Metamorfoza 3">
+            <p>Budowa masy mięśniowej</p>
+        </div>
+    </div>
+</section>
+
 <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
     <p>Zadzwoń: 123 456 789</p>
