--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -10,7 +10,8 @@
 
 <meta name="author" content="NaxaBe Digital">
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
