--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -64,8 +64,13 @@
     <p>Email: kontakt@fitpower.pl</p>
 </section>
 
-<footer>
-    <p>© 2026 FitPower | Trener Personalny Warszawa</p>
+<footer class="site-footer">
+    <div class="footer-content">
+        <p>© 2026 FitPower | Trener Personalny Warszawa</p>
+        <p class="credit">
+            Made with ❤️ by <a href="https://naxabe.digital" target="_blank">naxabe.digital</a>
+        </p>
+    </div>
 </footer>
 
 </body>
