--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <meta property="og:title" content="NaxaBe Digital – Web & AI Studio">
 <meta property="og:description" content="Nowoczesne strony internetowe, SEO i AI dla firm, które chcą rosnąć online.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://naxabedigital.github.io/">
-<meta property="og:image" content="https://naxabedigital.github.io/favicon.png">  
+<meta property="og:url" content="https://naxabe.digital/">
+<meta property="og:image" content="https://naxabe.digital/favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://naxabedigital.github.io/">
+  <link rel="canonical" href="https://naxabe.digital/">
 
-<link rel="icon" type="image/png" href="https://naxabedigital.github.io/favicon.png">
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="/favicon.png">
+  
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
