--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -58,6 +58,30 @@
     </div>
 </section>
 
+<section class="testimonials">
+    <h2>Opinie Klientów</h2>
+
+    <div class="testimonials-grid">
+        <div class="testimonial-card">
+            <div class="stars">★★★★★</div>
+            <p>„Schudłam 10 kg bez głodówek. Najlepsza decyzja w moim życiu.”</p>
+            <span>— Anna, 32 lata</span>
+        </div>
+
+        <div class="testimonial-card">
+            <div class="stars">★★★★★</div>
+            <p>„Profesjonalne podejście i realne efekty już po 2 miesiącach.”</p>
+            <span>— Michał, 28 lat</span>
+        </div>
+
+        <div class="testimonial-card">
+            <div class="stars">★★★★★</div>
+            <p>„Plan treningowy dopasowany idealnie do mojego trybu pracy.”</p>
+            <span>— Karolina, 29 lat</span>
+        </div>
+    </div>
+</section>
+
 <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
     <p>Zadzwoń: 123 456 789</p>
