--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -82,6 +82,47 @@
     </div>
 </section>
 
+<section class="pricing">
+    <h2>Cennik</h2>
+
+    <div class="pricing-grid">
+
+        <div class="price-card">
+            <h3>Pakiet Start</h3>
+            <div class="price">299 zł</div>
+            <ul>
+                <li>2 treningi personalne</li>
+                <li>Plan treningowy</li>
+                <li>Analiza składu ciała</li>
+            </ul>
+            <a href="#kontakt" class="price-btn">Wybieram</a>
+        </div>
+
+        <div class="price-card featured">
+            <h3>Pakiet Premium</h3>
+            <div class="price">799 zł</div>
+            <ul>
+                <li>8 treningów personalnych</li>
+                <li>Plan treningowy + dieta</li>
+                <li>Stały kontakt online</li>
+            </ul>
+            <a href="#kontakt" class="price-btn">Najczęściej wybierany</a>
+        </div>
+
+        <div class="price-card">
+            <h3>Pakiet VIP</h3>
+            <div class="price">1499 zł</div>
+            <ul>
+                <li>16 treningów</li>
+                <li>Indywidualny plan żywieniowy</li>
+                <li>Monitoring postępów</li>
+            </ul>
+            <a href="#kontakt" class="price-btn">Wybieram</a>
+        </div>
+
+    </div>
+</section>
+
 <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
     <p>Zadzwoń: 123 456 789</p>
