--- a/trainer-landing-page/index.html
+++ b/trainer-landing-page/index.html
@@ -88,36 +88,45 @@
     <div class="pricing-grid">
 
         <div class="price-card">
-            <h3>Pakiet Start</h3>
-            <div class="price">299 zł</div>
+            <div class="price-header">
+                <h3>Start</h3>
+                <div class="price">299 zł</div>
+            </div>
             <ul>
-                <li>2 treningi personalne</li>
-                <li>Plan treningowy</li>
-                <li>Analiza składu ciała</li>
+                <li>✔ 2 treningi personalne</li>
+                <li>✔ Plan treningowy</li>
+                <li>✔ Analiza składu ciała</li>
             </ul>
-            <a href="#kontakt" class="price-btn">Wybieram</a>
+            <a href="#kontakt" class="price-btn">Wybieram pakiet</a>
         </div>
 
         <div class="price-card featured">
-            <h3>Pakiet Premium</h3>
-            <div class="price">799 zł</div>
+            <div class="badge">NAJPOPULARNIEJSZY</div>
+            <div class="price-header">
+                <h3>Premium</h3>
+                <div class="price">799 zł</div>
+            </div>
             <ul>
-                <li>8 treningów personalnych</li>
-                <li>Plan treningowy + dieta</li>
-                <li>Stały kontakt online</li>
+                <li>✔ 8 treningów personalnych</li>
+                <li>✔ Plan treningowy + dieta</li>
+                <li>✔ Stały kontakt online</li>
+                <li>✔ Monitoring postępów</li>
             </ul>
-            <a href="#kontakt" class="price-btn">Najczęściej wybierany</a>
+            <a href="#kontakt" class="price-btn">Zaczynam teraz</a>
         </div>
 
         <div class="price-card">
-            <h3>Pakiet VIP</h3>
-            <div class="price">1499 zł</div>
+            <div class="price-header">
+                <h3>VIP</h3>
+                <div class="price">1499 zł</div>
+            </div>
             <ul>
-                <li>16 treningów</li>
-                <li>Indywidualny plan żywieniowy</li>
-                <li>Monitoring postępów</li>
+                <li>✔ 16 treningów</li>
+                <li>✔ Indywidualny plan żywieniowy</li>
+                <li>✔ Monitoring + raporty</li>
+                <li>✔ Priorytetowy kontakt</li>
             </ul>
-            <a href="#kontakt" class="price-btn">Wybieram</a>
+            <a href="#kontakt" class="price-btn">Wybieram VIP</a>
         </div>
 
     </div>
